[package]
name = "cxc_derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Derive crate for cxc"
homepage = "http://amjoshuamichael.com/cxc/"
repository = "https://github.com/amjoshuamichael/cxc_derive/"
readme = "README.md"
keywords = ["derive"]
categories = []
include = ["/src/**/*", "/Cargo.toml", "/README.md", "LICENSE*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
cxc = { git = "https://github.com/amjoshuamichael/cxc" }
